# pythonProject

./: README.md  main.py  pyproject.toml
csv_reader/: Cafenele.csv  csv_reader.py
json_reader/: Cafenele.csv  Coffee.json  json_reader.py
src/: Coffee.json  coffee_app.py  coffee_shop.py  main.py
