[tool.poetry]
name = "my-test-package"
version = "0.1.0"
description = ""
authors = ["eduardMit <eduard.mitrica98@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
colorama = "^0.4.6"
selenium = "^4.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
